# intelligent-image-analyzer

./: .env.example  .gitignore  LICENSE.md  README.md  SUMMARY.md  compose.yaml  compose.yml  rabbitmq.conf  scenariyi-vzayemodiyi.md
.github/workflows/: auth_ci.yml  auth_docs_build.yml  docs_build.yml  gateway_ci.yml  vision_ci.yml  vision_coverage.yml  vision_docs_build.yml
api-gateway-svc/: .env.example  .gitignore  Dockerfile  nest-cli.json  package-lock.json  package.json  tsconfig.build.tsbuildinfo
api-gateway-svc/src/: app.controller.ts  app.module.ts
api-gateway-svc/src/gateway-auth/: gateway-auth.controller.spec.ts  gateway-auth.controller.ts  gateway-auth.module.ts  gateway-auth.service.ts
api-gateway-svc/src/gateway-auth/guards/: jwt-auth.guard.ts
api-gateway-svc/src/gateway-auth/test/: gateway-auth.controller.spec.ts  gateway-auth.service.spec.ts  jwt-auth.guard.spec.ts
api-gateway-svc/src/gateway-grpc-vision/: gateway-grpc-vision.controller.ts  gateway-grpc-vision.module.ts  gateway-grpc-vision.service.ts
api-gateway-svc/src/gateway-grpc-vision/proto-types/: computer_vision.ts
api-gateway-svc/src/gateway-grpc-vision/test/: gateway-grpc-vision.controller.spec.ts  gateway-grpc-vision.service.spec.ts
auth-svc/: .env.example  Dockerfile  package-lock.json  package.json
auth-svc/src/: app.module.ts  auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.ts  main.ts
auth-svc/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
auth-svc/src/auth/dto/: index.ts  jwt-generation.dto.ts  jwt-refresh-failure-result.dto.ts  jwt-validation-result.dto.ts  sign-up.dto.ts  verification-key.dto.ts
auth-svc/src/auth/entities/: user.entity.ts
auth-svc/src/dto/: index.ts  jwt-generation-result.dto.ts  jwt-generation.dto.ts  jwt-result.dto.ts  jwt.dto.ts  sign-in-result.dto.ts  sign-in.dto.ts  sign-up-result.dto.ts  sign-up.dto.ts  verification-data.dto.ts
auth-svc/src/entities/: user.entity.ts
auth-svc/src/exceptions/: index.ts  not-access-token.exeption.ts
auth-svc/src/filters/: rpc.validation.filter.ts
auth-svc/src/mail/: mail.module.ts  mail.service.ts
auth-svc/src/tests/: auth.controller.spec.ts  validation.pipe.spec.ts
auth-svc/test/: app.e2e-spec.ts
grpc-vision-svc/: .dockerignore  .env  Cargo.toml  Dockerfile  README.Docker.md  README.md  build.rs  models.toml
grpc-vision-svc/.cargo/: config.toml
grpc-vision-svc/proto/: computer_vision.proto
grpc-vision-svc/src/: lib.rs  main.rs  middleware.rs  service_impl.rs
grpc-vision-svc/src/image_captioning/: image_processing.rs  mod.rs  model_loader.rs  token_output_stream.rs  utils.rs
grpc-vision-svc/tests/: reflection_test.rs
grpc-vision-svc/tests/common/: mod.rs
(+5 files in other folders)
