[package]
name = "grpc-vision-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
prost = "0.12.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = { version = "0.11.0", features = ["tls"] }
tonic-reflection = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"
