[package]
name = "grpc-vision-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hf-hub = "0.3.2"
once_cell = "1.19.0"
prost = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
thiserror = "1.0.58"
tokenizers = "0.15.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.12"
tonic = { version = "0.11.0", features = ["tls"] }
tonic-reflection = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.10.1"
