[package]
name = "grpc-vision-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "0.5.0", optional = true }
candle-nn = { version = "0.5.0", optional = true }
candle-transformers = { version = "0.5.0", optional = true}
hf-hub = "0.3.2"
image = "0.25.1"
once_cell = "1.19.0"
prost = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokenizers = { version = "0.15.2", features = ["hf-hub"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.12"
tonic = { version = "0.11.0", features = ["tls"] }
tonic-reflection = "0.11.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
mockall = "0.12.1"
prost-types = "0.12.4"
tempfile = "3.10.1"

[features]
default = ["candle-core", "candle-nn", "candle-transformers"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
